ci: pin formae version to 0.77.15-internal
The discovery tests require features from 0.77.x that aren't in the
0.76.5 release. Pin to internal version until 0.77.x is publicly released.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,4 +117,4 @@ jobs:
         env:
           AWS_REGION: us-east-1
           FORMAE_TEST_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}
-        run: make conformance-test VERSION=${{ vars.FORMAE_VERSION || '0.76.5' }}
+        run: make conformance-test VERSION=${{ vars.FORMAE_VERSION || '0.77.15-internal' }}
