fix(ci): prevent concurrent conformance tests between CI and nightly
Both workflows share AWS test resources with the same prefix. Add
concurrency group 'aws-conformance-tests' to ensure only one conformance
test suite runs at a time, preventing resource conflicts where one
workflow's cleanup could delete another's in-progress test resources.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event.inputs.run_conformance == 'true'
     timeout-minutes: 60
+    # Prevent concurrent conformance tests (CI and nightly share test resources)
+    concurrency:
+      group: aws-conformance-tests
+      cancel-in-progress: false
     permissions:
       id-token: write
       contents: read
