feat: update plugin SDK for registrar port isolation and enable parallel CI
Update pkg/model to v0.1.4, pkg/plugin to v0.1.11, and
pkg/plugin-conformance-tests to v0.1.17 which add per-agent registrar
port isolation. Enable PARALLEL=5 in CI conformance tests.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,7 +121,7 @@ jobs:
         env:
           AWS_REGION: us-east-1
           FORMAE_TEST_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}
-        run: make conformance-test
+        run: make conformance-test PARALLEL=5
 
   # Notify when build is fixed (was red, now green)
   notify-fixed:
