--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,11 @@ on:
         default: 'false'
         type: boolean
 
+# Prevent concurrent conformance tests (CI and nightly share test resources)
+concurrency:
+  group: aws-conformance-tests
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -79,16 +84,42 @@ jobs:
           pkl eval formae-plugin.pkl --format json > /dev/null
           echo "Manifest validated successfully"
 
-  # Conformance tests run the full CRUD lifecycle against real AWS resources
-  conformance-tests:
+  # Discover test cases from testdata/ directory for matrix strategy
+  discover-tests:
     needs: [build, lint, pkl-validate, test-unit]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event.inputs.run_conformance == 'true'
-    timeout-minutes: 60
-    # Prevent concurrent conformance tests (CI and nightly share test resources)
-    concurrency:
-      group: aws-conformance-tests
-      cancel-in-progress: false
+    outputs:
+      test-cases: ${{ steps.discover.outputs.test-cases }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Discover test cases
+        id: discover
+        run: |
+          # Find all *.pkl files in testdata/, exclude -update.pkl and -replace.pkl variants,
+          # and extract the base test case name
+          TEST_CASES=$(ls testdata/*.pkl 2>/dev/null \
+            | xargs -n1 basename \
+            | grep -v '\-update\.pkl$' \
+            | grep -v '\-replace\.pkl$' \
+            | sed 's/\.pkl$//' \
+            | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          echo "Discovered test cases: ${TEST_CASES}"
+          echo "test-cases=${TEST_CASES}" >> "$GITHUB_OUTPUT"
+
+  # Conformance tests run the full CRUD lifecycle against real AWS resources.
+  # Each test case runs in its own isolated job via matrix strategy.
+  conformance-tests:
+    needs: [discover-tests]
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        test-case: ${{ fromJson(needs.discover-tests.outputs.test-cases) }}
+      max-parallel: 10
+      fail-fast: false
     permissions:
       id-token: write
       contents: read
@@ -117,11 +148,11 @@ jobs:
       - name: Install plugin
         run: make install
 
-      - name: Run conformance tests
+      - name: Run conformance test (${{ matrix.test-case }})
         env:
           AWS_REGION: us-east-1
           FORMAE_TEST_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}
-        run: make conformance-test PARALLEL=5
+        run: make conformance-test TEST=${{ matrix.test-case }} PARALLEL=1
 
   # Notify when build is fixed (was red, now green)
   notify-fixed:
