fix(ci): use inputs context for boolean workflow_dispatch input
github.event.inputs returns strings inconsistently for boolean types.
The inputs context returns properly typed values.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
   discover-tests:
     needs: [build, lint, pkl-validate, test-unit]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event.inputs.run_conformance == 'true'
+    if: github.event_name == 'push' || inputs.run_conformance == true
     outputs:
       test-cases: ${{ steps.discover.outputs.test-cases }}
     steps:
