fix(ci): always run conformance on workflow_dispatch
Boolean input handling is unreliable across GitHub Actions contexts.
Simply check the event name - manual triggers always want conformance.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
   discover-tests:
     needs: [build, lint, pkl-validate, test-unit]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || inputs.run_conformance == true
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     outputs:
       test-cases: ${{ steps.discover.outputs.test-cases }}
     steps:
