--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
   discover-tests:
     needs: [build, lint, pkl-validate, test-unit]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event.inputs.run_conformance == 'true'
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     outputs:
       test-cases: ${{ steps.discover.outputs.test-cases }}
     steps:
@@ -140,7 +140,7 @@ jobs:
     strategy:
       matrix:
         test-case: ${{ fromJson(needs.discover-tests.outputs.test-cases) }}
-      max-parallel: 10
+      max-parallel: 5
       fail-fast: false
     permissions:
       id-token: write
