--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,9 +103,38 @@ jobs:
       - name: Verify schema
         run: make verify-schema
 
+  # Integration tests run against real AWS resources (Route53, EC2, etc.)
+  # These are self-contained: each test creates and cleans up its own resources.
+  test-integration:
+    needs: [test-unit]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    timeout-minutes: 30
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.25"
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::942849037363:role/admin-test-pel
+          role-session-name: IntegrationTests
+
+      - name: Run integration tests
+        run: make test-integration
+
   # Discover test cases from testdata/ directory for matrix strategy
   discover-tests:
-    needs: [build, lint, pkl-validate, verify-schema, test-unit]
+    needs: [build, lint, pkl-validate, verify-schema, test-unit, test-integration]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     outputs:
