ci: consolidate CI jobs and fix integration test timeout
Merge build, test-unit, lint, pkl-validate, and verify-schema into a
single "checks" job to reduce runner overhead. Increase go test timeout
to 30m for integration tests - the Route53 suite exceeds the default
10m limit. Add test-integration to nightly notification dependencies.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  checks:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -38,67 +38,18 @@ jobs:
       - name: Build
         run: make build
 
-  test-unit:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.25"
-
-      - name: Run unit tests
-        run: make test-unit
-
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.25"
-
-      - name: golangci-lint
+      - name: Lint
         uses: golangci/golangci-lint-action@v9.2.0
         with:
           version: latest
 
-  pkl-validate:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Pkl
-        uses: pkl-community/setup-pkl@v0
-        with:
-          pkl-version: 0.30.0
+      - name: Unit tests
+        run: make test-unit
 
       - name: Validate Pkl manifest
         run: |
           pkl eval formae-plugin.pkl --format json > /dev/null
           echo "Manifest validated successfully"
-
-  verify-schema:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.25"
-
-      - name: Set up Pkl
-        uses: pkl-community/setup-pkl@v0
-        with:
-          pkl-version: 0.30.0
 
       - name: Verify schema
         run: make verify-schema
@@ -106,7 +57,7 @@ jobs:
   # Integration tests run against real AWS resources (Route53, EC2, etc.)
   # These are self-contained: each test creates and cleans up its own resources.
   test-integration:
-    needs: [test-unit]
+    needs: [checks]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     timeout-minutes: 30
@@ -134,7 +85,7 @@ jobs:
 
   # Discover test cases from testdata/ directory for matrix strategy
   discover-tests:
-    needs: [build, lint, pkl-validate, verify-schema, test-unit, test-integration]
+    needs: [checks, test-integration]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     outputs:
@@ -248,7 +199,7 @@ jobs:
 
   # Notify when build is fixed (was red, now green)
   notify-fixed:
-    needs: [build, test-unit, lint, pkl-validate, conformance-tests, post-cleanup]
+    needs: [checks, conformance-tests, post-cleanup]
     runs-on: ubuntu-latest
     if: success() && github.event_name == 'push'
     steps:
@@ -310,7 +261,7 @@ jobs:
 
   # Notify on failure
   notify-failure:
-    needs: [build, test-unit, lint, pkl-validate, conformance-tests, post-cleanup]
+    needs: [checks, conformance-tests, post-cleanup]
     runs-on: ubuntu-latest
     if: failure() && github.event_name == 'push'
     steps:
